feat: Update Project List (#443)
* refactor: update list_all_projects API

* refactor: clean up Project types and API calls

* refactor: update Project List style and add link to PR

* fix: small style and logic fixes on frontend

* fix: respond comments


---------
